chore: fix deprecated new URL()